# bubbles-detection

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
core/: __init__.py  app.py  train.py
core/configs/: api.yaml  config.yaml  data.yaml  default.yaml  mlflow.yaml  paths.yaml  yolov8.yaml
core/weights/: .gitignore  model.pt.dvc
dataset/: .gitignore  README.md  images.dvc  labels.dvc
service/: .gitignore  package-lock.json  package.json
service/public/: index.html
service/src/: App.css  App.js  config.js  version.js
service/src/components/MainPanel/: MainPanel.js
service/src/components/Sidebar/: Sidebar.css  Sidebar.js
service/src/components/TestModelPage/: TestModelPage.css  TestModelPage.js
